--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,16 @@
 language: c
+
+sudo: false
+
+install:
+  - git clone https://github.com/radare/radare2
+  - cd radare2
+  - ./configure --prefix=`pwd`/install > /dev/null
+  - make -s > /dev/null
+  - make install > /dev/null
+  - cd ..
+
+script:
+  - make
+  - pwd
+
