--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ install:
   - ./configure --prefix=`pwd`/install > /dev/null
   - make -s > /dev/null
   - make install > /dev/null
+  - export R2_INCLUDE=/home/travis/build/Maijin/NES/radare2/libr/include
   - cd ..
 
 script:
