--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,8 @@ install:
   - ./configure --prefix=`pwd`/install > /dev/null
   - make -s > /dev/null
   - make install > /dev/null
-  - export R2_INCLUDE="-I/home/travis/build/Maijin/NES/radare2/libr/include"
+  - make pkgcfg > /dev/null
+  - #export R2_INCLUDE="-I/home/travis/build/Maijin/NES/radare2/libr/include"
   - cd ..
 
 script:
